Temporary merge, some tests are not working